# hrt-datathon-viz

./: .gitignore  HANDOVER.md  README.md  pyproject.toml
.github/workflows/: pages.yml
data/: finbert_scores.parquet  headline_annotations.parquet
docs/: findings_log.md  methodology_notes.md
model/: config.py  solution.py
scripts/: build_site_data.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css  types-shim.d.ts
web/src/components/: AlignmentDemo.tsx  AugmentationView.tsx  CoefficientsView.tsx  DecayCurves.tsx  Intro.tsx  MathBlock.tsx  Navigation.tsx  PerformancePanel.tsx  Presentation.tsx  SessionExplorer.tsx
web/src/lib/: Plot.tsx  dataLoaders.ts  format.ts  types.ts
