[project]
name = "hrt-datathon-viz"
version = "0.1.0"
description = "Visualization platform for the HRT Datathon 2026 winning solution"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "scikit-learn>=1.5",
    "torch>=2.3",
]

[tool.uv]
package = false
